--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.3",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.8",
     "lucide-react": "^0.374.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^15.4.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
